# FarmSentinal

./: .gitignore  README.md  start.bat
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/esp32_cam/: esp32_cam.ino  esp8266.ino
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AppImage.tsx  IntrusionAlertModal.tsx  MetricCard.tsx  NavigationSidebar.tsx  StatusBadge.tsx
frontend/src/hooks/: useSensorData.js
frontend/src/pages/: Camera.tsx  Dashboard.tsx  Settings.tsx
frontend/src/services/: api.js
frontend/src/styles/: fonts.css  globals.css  theme.css
